--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -2,8 +2,9 @@
   position: fixed;
   left: 0;
   top: 0;
-  height: 100%;
   width: 260px;
+  height: 100%;
+  overflow-y: auto;
   z-index: 10000;
   background-color: #000;
 }
