08.헤더 데이터작업

--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -2,6 +2,9 @@
   --mainfont-nanum: "nanumSquareNeo";
   --mainfont-nexon: "nexonLv1";
 
+  // 로고 색깔
+  --red: #6151d2;
+
   --black: #000;
   --black100: #161616;
   --black200: #222;
