--- a/src/assets/scss/section/_search.scss
+++ b/src/assets/scss/section/_search.scss
@@ -42,6 +42,29 @@
     }
     input {
       padding: 14px 14px 14px 45px;
+      font-size: 10px;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .search__inner {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: var(--blackAlpha400);
+    backdrop-filter: blur(10px);
+    padding: 17px 20px 17px 200px;
+
+    label {
+      top: 26px;
+      left: 208px;
+    }
+    input {
+      padding: 14px 10px 14px 35px;
+      font-size: 10px;
     }
   }
 }
